# 16280

HW10-AutonomousBot/: README.md
HW10-AutonomousBot/src/model_generation/: model.py  train.ipynb
HW10-AutonomousBot/src/model_generation/data/raw/rosbag2_1/: metadata.yaml
HW10-AutonomousBot/src/model_generation/data/raw/rosbag2_2/: metadata.yaml
HW10-AutonomousBot/src/model_generation/util/: data_split.py  extract_ros_bag.py  merge_dataset.py  smooth_omega.py
HW10-AutonomousBot/src/self_driving/: setup.py
HW10-AutonomousBot/src/self_driving/launch/: steering_inference.launch.xml
HW10-AutonomousBot/src/self_driving/self_driving/: model.py  steering_inference_image.py
HW10B-Behavior-Trees/: README.md  steering_inference_image_bt.py
HW10B-Behavior-Trees/py_trees_track_uturn/: package.xml  setup.cfg  setup.py
HW10B-Behavior-Trees/py_trees_track_uturn/py_trees_track_uturn/: bt_dummy.py  bt_dummy_node.py  bt_node.py
HW9B/src/rrt_planner/: CMakeLists.txt  package.xml  plugin_description.xml
HW9B/src/rrt_planner/config/: rrt_moveit.rviz
HW9B/src/rrt_planner/include/rrt_planner/: rrt_planner_manager.hpp
HW9B/src/rrt_planner/launch/: run_panda_rrt.launch.py
HW9B/src/rrt_planner/src/: rrt_planner_manager.cpp  rrt_planning_context.cpp
hw2/: fusion.py  imu_subscriber.py  odom_yaw_extractor.py
hw4/: README.md
hw4/group/: icp_rviz.rviz  scan_match.py  scan_merge.py
hw4/individual/: point2plane.py
hw4/individual/data/: odom_sync.txt  scan_sync.txt
hw5/: README.md
hw5/OGM_files/: log_odds_sim.py  occupancy_grid_mapping_log_odds_main.py
hw5/cpp_nodes/: CMakeLists.txt  package.xml
hw5/cpp_nodes/data/rosbag2_2025_04_03-16_02_57/: metadata.yaml
hw5/cpp_nodes/src/: msg_sync_node.cpp
hw6/: README.md  particle_filter_main.py  rviz_hw6.rviz
hw7/: HW_7.py  README.md  sample-code.py
hw8_F25/: README.md  q1.py  q2a.py  q2b.py  q2c.py  q2d.py
