<?xml version="1.0"?>
<package format="3">
  <name>rrt_planner</name>
  <version>0.0.1</version>
  <description> RRT planner plugin for MoveIt 2</description>

  <maintainer email="jarolovi@andrew.cmu.edu">Julius Arolovitch</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>random_numbers</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <moveit_core plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>

